# ai-broadcast-hub

./: .env.example  README.md  codex_automations_x_workflow.md  daily_thread_automation_prompt.md  index.html  material_bank_sources.md  thread_seed_prompt.md  tiktok_white_company_3signs_script.md  weekly_standalone_review_prompt.md  x_api_integration_summary.md  x_codex_automations_daily_prompt.md
.github/workflows/: tiktok-daily-post.yml
Develop/: README.md
Develop/Aegis/docs/: README.md  data-flow.md
Develop/Aegis/docs/pii-masking/recognizers/: address.py  corporate_number.py  drivers_license.py  my_number.py  phone_number.py  postal_code.py  pyproject.toml  scanner.py
apps/control-plane/: .gitignore  README.md  pyproject.toml
apps/control-plane/src/aegis/: __init__.py  auth.py  db.py  deps.py  main.py  models.py  schemas.py
apps/control-plane/src/aegis/routes/: analytics.py  deletion.py  events.py
apps/control-plane/src/aegis/static/: app.js
apps/control-plane/tests/: conftest.py  test_e2e_ui_flow.py  test_scenarios.py
docs/ai-ops-service/: PRD.md  README.md  basic-design.md
public/: README.md
scripts/: check-x-auth.mjs
tiktok/: .env.example  .gitignore  POSTING.md  README.md  captions.md  docker-compose.yml  requirements.txt
tiktok/pipeline/: compose.py  config.py  image_gen.py  run.py  subtitle.py  tts.py
tiktok/posting/: __init__.py  captions.py  config.py  notify.py  run.py  state.json  state.py  uploader.py
tiktok/posts/: posts.json
tiktok/tools/: cron-daily.sh  install_voice.py  setup-github-release.sh  setup.sh
(+72 files in other folders)
