[project]
name = "aegis-control-plane"
version = "0.1.0"
description = "Aegis Managed AI Operations — Control Plane MVP"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Aegis Engineering" }]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "pydantic>=2.6",
    "pydantic[email]>=2.6",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aegis"]
